Fixed issue no:39 cannot type non alphanumeric characters

--- a/installer/app/keyboards/Tamil-phonetic.txt.in
+++ b/installer/app/keyboards/Tamil-phonetic.txt.in
@@ -1,4 +1,7 @@
-﻿### File header must not be modified
+﻿### Modified by Muguntharaj to use in ekalappai from original scim table created by Red Hat.
+### Modification1 : Added . , / handling 
+###
+### File header must not be modified
 ### This file must be encoded into UTF-8.
 ### Copyright (c) 2004-2005 Red Hat, Inc. All rights reserved.
 SCIM_Generic_Table_Phrase_Library_TEXT
@@ -582,4 +585,7 @@ kshaa க்ஷா
 kshA க்ஷா
 kshi க்ஷி
 sri ஸ்ரீ
+, ,
+. .
+/ /
 END_TABLE
