Fix for issue no: 22 Tamil99 keyboard missing features

--- a/installer/app/keyboards/Tamil-tamil99.txt.in
+++ b/installer/app/keyboards/Tamil-tamil99.txt.in
@@ -151,6 +151,7 @@ f  ்
 hf க்
 h க
 hh க்க
+hhh க்கக
 hq கா
 hs கி
 hw கீ
@@ -165,6 +166,7 @@ hz கௌ
 bf ங்
 b ங
 bb ங்ங
+bbb ங்ஙங
 bq ஙா
 bs ஙி
 bw ஙீ
@@ -179,6 +181,7 @@ bz ஙௌ
 [f ச்
 [ ச
 [[ ச்ச
+[[[ ச்சச
 [q சா
 [s சி
 [w சீ
@@ -192,6 +195,7 @@ bz ஙௌ
 [z சௌ
 ]f ஞ்
 ] ஞ
+]]] ஞ்ஞஞ
 ]] ஞ்ஞ
 ]q ஞா
 ]s ஞி 
@@ -206,6 +210,8 @@ bz ஙௌ
 ]z ஞௌ
 of ட்
 o ட
+oo ட்ட
+ooo ட்டட
 oq டா
 os டி
 ow டீ
@@ -217,9 +223,9 @@ or டை
 oc டொ
 ox டோ
 oz டௌ
-oo ட்ட
 pf ண்
 p ண
+ppp ண்ணண
 pp ண்ண
 pq ணா
 ps ணி
@@ -235,6 +241,7 @@ pz ணௌ
 lf த்
 l த
 ll த்த
+lll த்தத
 lq தா
 ls தி
 lw தீ
@@ -249,6 +256,7 @@ lz தௌ
 ;f ந் 
 ;  ந 
 ;; ந்ந
+;;; ந்நந
 ;q நா
 ;s நி
 ;w நீ
@@ -263,6 +271,7 @@ lz தௌ
 jf ப்
 j ப
 jj ப்ப
+jjj ப்பப
 jq பா
 js பி
 jw பீ
@@ -277,6 +286,7 @@ jz பௌ
 kf ம்
 k ம
 kk ம்ம
+kkk ம்மம
 kq மா
 ks மி
 kw மீ
@@ -291,6 +301,7 @@ kz மௌ
 'f ய்
 '  ய
 '' ய்ய
+''' ய்யய
 'q யா
 's யி
 'w யீ
@@ -305,6 +316,7 @@ kz மௌ
 mf ர்
 m ர
 mm ர்ர
+mmm ர்ரர
 mq ரா
 ms ரி
 mw ரீ
@@ -319,6 +331,7 @@ mz ரௌ
 nf ல்
 n ல
 nn ல்ல
+nnn ல்லல
 nq லா
 ns லி
 nw லீ
@@ -333,6 +346,7 @@ nz லௌ
 vf வ்
 v வ
 vv வ்வ
+vvv வ்வவ
 vq வா
 vs வி
 vw வீ
@@ -347,6 +361,7 @@ vz வௌ
 /f ழ்
 /  ழ
 // ழ்ழ
+/// ழ்ழழ
 /q ழா
 /s ழி
 /w ழீ
@@ -361,6 +376,7 @@ vz வௌ
 yf ள்
 y ள
 yy ள்ள
+yyy ள்ளள
 yq ளா
 ys ளி
 yw ளீ
@@ -375,6 +391,7 @@ yz ளௌ
 uf ற்
 u ற
 uu ற்ற
+uuu ற்றற
 uq றா
 us றி
 uw றீ
@@ -389,6 +406,7 @@ uz றௌ
 if ன்
 i ன
 ii ன்ன
+iii ன்னன
 iq னா
 is னி
 iw னீ
@@ -403,6 +421,7 @@ iz னௌ
 Ef ஜ்
 E ஜ
 EE ஜ்ஜ
+EEE ஜ்ஜஜ
 Eq ஜா
 Es ஜி
 Ew ஜீ
@@ -417,6 +436,7 @@ Ez ஜௌ
 Wf ஷ்
 W ஷ
 WW ஷ்ஷ
+WWW ஷ்ஷஷ
 Wq ஷா
 Ws ஷி
 Ww ஷீ
@@ -431,6 +451,7 @@ Wz ஷௌ
 Qf ஸ்
 Q ஸ
 QQ ஸ்ஸ
+QQQ ஸ்ஸஸ
 Qq ஸா
 Qs ஸி
 Qw ஸீ
@@ -445,6 +466,7 @@ Qz ஸௌ
 Rf ஹ்
 R ஹ
 RR ஹ்ஹ
+RRR ஹ்ஹஹ
 Rq ஹா
 Rs ஹி
 Rw ஹு
@@ -458,6 +480,7 @@ Rz ஹௌ
 Tf க்ஷ்
 T க்ஷ
 TT க்ஷ்க்ஷ
+TTT க்ஷ்க்ஷக்ஷ
 Tq க்ஷா
 Ts க்ஷி
 Tw க்ஷீ
