Added Bamini keyboard support

--- a/installer/app/settings.ini
+++ b/installer/app/settings.ini
@@ -1,17 +1,20 @@
 [General]
 shortcut=F2
 shortcut_modifier=NONE
-number_of_keyboards=4
+number_of_keyboards=5
 selected_keyboard=1
 keyboard_name1=Tamil99
 keyboard_name2=Phonetic
 keyboard_name3=Typewriter
-keyboard_name4=Inscript
+keyboard_name4=Bamini
+keyboard_name5=Inscript
 keyboard_file1=keyboards/Tamil-tamil99.txt.in
 keyboard_file2=keyboards/Tamil-phonetic.txt.in
 keyboard_file3=keyboards/Tamil-remington.txt.in
-keyboard_file4=keyboards/Tamil-inscript.txt.in
+keyboard_file4=keyboards/Tamil-bamini.txt.in
+keyboard_file5=keyboards/Tamil-inscript.txt.in
 keyboard_icon1=keyboards/tamil99.png
 keyboard_icon2=keyboards/phonetic.png
 keyboard_icon3=keyboards/typewriter.png
-keyboard_icon4=keyboards/inscript.png
+keyboard_icon4=keyboards/bamini.png
+keyboard_icon5=keyboards/inscript.png
